name:
  ship
version:
  0.1.0.0
-- synopsis:
-- description:
license:
  GPL-3
license-file:
  LICENSE
author:
  David Flemström
maintainer:
  david.flemstrom@gmail.com
-- copyright:
category:
  Game
build-type:
  Simple
cabal-version:
  >=1.10

executable ship
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -Wall
    -Werror
    -fwarn-tabs
    -funbox-strict-fields
    -O2
    -fno-warn-orphans
    -fno-warn-unused-do-bind
    -with-rtsopts=-N
  main-is:
    Main.hs
  -- other-modules:
  build-depends:
      base ==4.5.*
    , aeson ==0.6.*
    , ansi-terminal ==0.5.*
    , bytestring ==0.9.*
    , cmdargs ==0.10.*
    , conduit ==0.5.*
    , data-default ==0.5.*
    , data-lens ==2.0.*
    , data-lens-fd ==2.0.*
    , data-lens-ixset ==0.1.*
    , data-lens-template ==2.1.*
    , hslogger ==1.2.*
    , ixset ==1.0.*
    , MonadRandom ==0.1.*
    , mtl == 2.1.*
    , network ==2.3.*
    , network-conduit ==0.6.*
    , random ==1.0.*
    , shakespeare-text ==1.0.*
    , system-time-monotonic ==0.2.*
    , text ==0.11.*
    , time ==1.4.*
    , transformers == 0.3.*
    , websockets ==0.7.*
